# Coursework_7

./: .env.sample  README.md  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habits/: models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_frequency_in.py  0004_alter_habit_frequency_in.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
