[tool.poetry]
name = "coursework-7"
version = "0.1.0"
description = ""
authors = ["Nikita-Musk <nik52119w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
isort = "^5.13.2"
pillow = "^11.0.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
redis = "^5.2.0"
requests = "^2.32.3"
coverage = "^7.6.4"
flake8 = "^7.1.1"
drf-yasg = "^1.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
